<resources>
    <string name="app_name">PetopiaApp</string>
    <string name="title_home">home</string>
    <string name="title_qna">Q&amp;A</string>
    <string name="title_search">search</string>
    <string name="title_notifications">notifications</string>
    <string name="title_myinfo">My info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>