<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.petopiaapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_qna"
        android:name="com.example.petopiaapp.ui.qna.qnaFragment"
        android:label="@string/title_qna"
        tools:layout="@layout/fragment_qna" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.petopiaapp.ui.search.searchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.petopiaapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_myinfo"
        android:name="com.example.petopiaapp.ui.myinfo.myinfoFragment"
        android:label="@string/title_myinfo"
        tools:layout="@layout/fragment_myinfo" />
</navigation>